# csong

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  TODO  build  lang.txt  window_manager_interact
config/: sample.toml
include/app/: app.h  config.h  log.h  lyrics.h  mpd_client.h  normalize.h  player.h  renderer.h  spotify.h  text_layout.h  time.h  ui.h  unicode.h  x11.h  ytmusic.h
spotify_lyrics/: CMakeLists.txt  README.md  bu  plan2  run
spotify_lyrics/src/: cache.c  cache.h  json_utils.c  json_utils.h  lyrics.c  lyrics.h  lyrics_lrclib.c  lyrics_lrclib.h  lyrics_ovh.c  lyrics_ovh.h  main.c  normalize.c  normalize.h  platform.h  platform_linux.c  platform_windows.cpp
src/: main.c
src/app/: app.c  config.c  log.c  state.c
src/lyrics/: cache.c  format.c  provider.c
src/mpd/: event_loop.c  mpd_client.c
src/player/: mpris_common.c  mpris_common.h  player.c  spotify.c  spotify_mpris.c  spotify_win.cpp  ytmusic.c  ytmusic_mpris.c  ytmusic_win.c
src/render/: font.c  renderer.c  text_layout.c
src/ui/: ui.c  x11_backend.c  x11_backend.h
src/util/: fs.c  normalize.c  string.c  time.c  unicode.c
src/x11/: compositor.c  events.c  window.c  workspace.c
